// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage debe de mostrar el componente con la imagen del producto 1`] = `
<DocumentFragment>
  <div
    class="productCard undefined"
  >
    <img
      alt="Product Image"
      class=" productImg undefined "
      src="./coffee-mug2.png"
    />
  </div>
</DocumentFragment>
`;

exports[`ProductImage debe de mostrar el componente correctamente con el titulo personalizado 1`] = `
<DocumentFragment>
  <img
    alt="Product Image"
    class=" productImg undefined "
    src="https://e7.pngegg.com/pngimages/399/148/png-clipart-pokemon-gold-and-silver-gengar-haunter-pokemon-go-purple-cartoon-thumbnail.png"
  />
</DocumentFragment>
`;
